Fix scroll-hint z-index

--- a/pongi22/src/index.css
+++ b/pongi22/src/index.css
@@ -76,6 +76,10 @@ button:focus-visible {
   z-index: 1;
 }
 
+.scroll-hint-icon {
+  z-index: 100;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
